--- a/src/pages/Bar/style.scss
+++ b/src/pages/Bar/style.scss
@@ -11,72 +11,241 @@
   justify-content: center;
   align-items: center;
 
+  box-sizing: border-box;
+
   &-content {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    max-height: 90vh;
+    min-height: 750px;
+    margin: 30px 0;
+    max-width: 700px;
+
+    background-color: rgba(221, 221, 221, 0.658);
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    padding: 5%;
+    box-sizing: border-box;
+    min-width: 800px;
+
+    &-logo {
+      height: 10%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 20px;
+
+      border-radius: 10px;
+
+      & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
 
     &-drinks {
-      width: 50%;
-      height: 100%;
-      min-width: 800px;
+      width: 100%;
+      height: 30%;
+      min-height: 200px;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
       align-items: center;
+      position: relative;
 
-      &-drink {
-        width: 150px;
-        height: 150px;
-        background-color: rgba(255, 255, 255, 0.5);
-        border-radius: 10px;
-        margin: 20px;
-        display: flex;
+      border-radius: 10px;
+      border-color: rgba(185, 185, 185, 0.5);
+      padding: 20px;
+
+      background-color: rgba(0, 0, 0, 0.877);
+      &-table {
+        width: 100%;
+        height: 80%;
+        display: inline-block;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-around;
+        align-items: center;
+        border: 1px dotted white;
+        border-radius: 10px;
+        border-color: rgba(15, 15, 15, 0.5);
+        background-color: rgba(255, 255, 255, 0.5);
+
+        overflow-y: scroll;
+        // Nice scrollbar
+        &::-webkit-scrollbar {
+          width: 10px;
+        }
+
+        &::-webkit-scrollbar-track {
+          background: rgba(255, 255, 255, 0.5);
+          border-radius: 10px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background: rgba(0, 0, 0, 0.5);
+          border-radius: 10px;
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+          background: rgba(0, 0, 0, 0.8);
+        }
+
+        &-row {
+          width: 100%;
+          height: 2em;
+          display: flex;
+          box-sizing: border-box;
+          padding: 5px;
+          cursor: pointer;
+
+          // Every odd one make it darker
+          &:nth-child(odd) {
+            background-color: rgba(85, 83, 83, 0.5);
+          }
+
+          &:hover {
+            background-color: rgba(85, 83, 83, 0.8);
+          }
+
+          &-name {
+            font-size: 15px;
+            font-weight: 900;
+            color: black;
+            text-align: right;
+
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            margin-right: 5%;
+            margin-left: 20px;
+          }
+
+        }
+      }
+
+      &-search {
+        width: 100%;
+        height: 13%;
+        display: flex;
+        color: white;
+        flex-direction: column;
+        justify-content: space-around;
         align-items: center;
 
-        &-image {
-          width: 100px;
-          height: 100px;
+        border-radius: 10px;
 
-          & img {
-            border-radius: 50%;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+        & input {
+          width: 80%;
+          height: 100%;
+          font-weight: 900;
+          color: black;
+          background-color: rgba(255, 255, 255, 0.5);
+          border-radius: 10px;
+          border: 1px dotted white;
+          border-color: rgba(15, 15, 15, 0.5);
+          padding: 5px;
+          box-sizing: border-box;
 
-            // Click through it
-            pointer-events: none;
+          // make placeholder black
+          &::placeholder {
+            color: black;
           }
         }
 
-        &-name {
-          font-size: 20px;
-          color: rgb(53, 53, 53);
-          margin-top: 10px;
-          font-weight: 900;
-          letter-spacing: 2px;
-          text-shadow: 0 0 5px white;
+        &-button {
+          width: 100%;
+          height: 50%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          & button {
+            width: 80%;
+            height: 80%;
+            font-size: 20px;
+            font-weight: 900;
+            color: black;
+            background-color: rgba(255, 255, 255, 0.5);
+            border-radius: 10px;
+            border: 1px dotted white;
+            border-color: rgba(15, 15, 15, 0.5);
+            padding: 5px;
+            box-sizing: border-box;
+          }
         }
       }
     }
 
     &-holder {
-      height: 500px;
       width: 100%;
       border: 1px dotted white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       margin-top: 20px;
       border-radius: 10px;
       border-color: rgba(15, 15, 15, 0.5);
-      background-color: rgba(255, 255, 255, 0.5);
+      background-color: rgba(255, 255, 255, 0.767);
+      // Overflow, but dont hide
+      overflow-y: scroll;
+      position: relative;
+
+      &-subheading {
+        font-size: 20px;
+        width: 100%;
+        box-sizing: border-box;
+        font-weight: 900;
+        color: black;
+        // Bottom border stylish
+        position: relative;
+        display: inline-block;
+        padding: 0 10px;
+        margin: 10px 0;
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -5px;
+          left: 0;
+          width: 100%;
+          height: 2px;
+          background-color: black;
+        }
+      }
+
+      &-cocktail {
+        &-ingredients {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          align-items: center;
+          position: relative;
+
+          box-sizing: border-box;
+
+          &-item {
+            width: 100%;
+            height: 2em;
+            display: flex;
+            box-sizing: border-box;
+            padding: 5px;
+            cursor: pointer;
+            // Bullet point
+            &::before {
+              content: "•";
+              color: black;
+              font-weight: 900;
+              margin-right: 15px;
+            }
+          }
+        }
+
+        &-value {
+          margin-left: 20px;
+        }
+      }
     }
   }
 
