--- a/src/pages/Bar/style.scss
+++ b/src/pages/Bar/style.scss
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5%;
+    padding: 4em;
     box-sizing: border-box;
     min-width: 800px;
 
@@ -47,23 +47,39 @@
     }
 
     &-drinks {
+      max-height: 40%;
       width: 100%;
-      height: 30%;
-      min-height: 200px;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
       align-items: center;
       position: relative;
-
       border-radius: 10px;
       border-color: rgba(185, 185, 185, 0.5);
-      padding: 20px;
-
+      padding: 10px;
       background-color: rgba(0, 0, 0, 0.877);
-      &-table {
+      box-sizing: border-box;
+
+      &-header {
         width: 100%;
-        height: 80%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        border-radius: 10px;
+
+        & h1 {
+          font-size: 30px;
+          font-weight: 900;
+          color: white;
+        }
+      }
+
+      &-table {
+        margin-top: 10px;
+        width: 100%;
+        max-height: 80%;
+        min-height: 100px;
         display: inline-block;
         flex-direction: column;
         justify-content: space-around;
@@ -122,12 +138,11 @@
             margin-right: 5%;
             margin-left: 20px;
           }
-
         }
       }
 
       &-search {
-        width: 100%;
+        width: 70%;
         height: 13%;
         display: flex;
         color: white;
@@ -138,7 +153,7 @@
         border-radius: 10px;
 
         & input {
-          width: 80%;
+          width: 100%;
           height: 100%;
           font-weight: 900;
           color: black;
@@ -177,12 +192,31 @@
           }
         }
       }
+
+      &-icon {
+        width: 30px;
+        height: 30px;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // background color
+        background-color: #8A8989;
+        cursor: pointer;
+        
+        & img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
     }
 
     &-holder {
       width: 100%;
       border: 1px dotted white;
       margin-top: 20px;
+      height: 100%;
       border-radius: 10px;
       border-color: rgba(15, 15, 15, 0.5);
       background-color: rgba(255, 255, 255, 0.767);
@@ -231,7 +265,6 @@
             display: flex;
             box-sizing: border-box;
             padding: 5px;
-            cursor: pointer;
             // Bullet point
             &::before {
               content: "•";
@@ -268,5 +301,19 @@
     justify-content: center;
     box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset,
       rgba(245, 245, 245, 0.3) 0px 18px 36px -18px inset;
+  }
+
+  &-music {
+    position: absolute;
+    // Bottom left
+    bottom: 20px;
+    left: 20px;
+    cursor: pointer;
+    font-size: 30px;
+    font-weight: 900;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
