--- a/src/components/Landing/LeftContentBar/LeftContentBar.css
+++ b/src/components/Landing/LeftContentBar/LeftContentBar.css
@@ -99,9 +99,11 @@
 
   .content__left input {
     width: 30%;
+    min-width: 200px;
     height: 2.5em;
-    font-size: 1.3em;
+    font-size: 1em;
     border-radius: 0.5em;
+    margin-top: 0.6em;
     font-weight: 600;
 
     /* Fancy button */
@@ -116,15 +118,42 @@
     transition: 0.5s;
   }
 
+  .content__left--header-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+  }
+
+  .content__left--header-container--text {
+    display: flex;
+
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .content__left--header-container--text h1 {
+    width: 100%;
+    text-align: center;
+    font-size: 200%;
+    margin: 0;
+  }
+
+  .content__left--header-container--text h3 {
+    width: 100%;
+    text-align: center;
+    font-size: 1em;
+  }
+
   .content__left--image {
     margin: 0;
-    width: 100%;
-    height: 5%;
     text-align: center;
+    width: 30vw;
   }
 
   .content__left--image img {
-    width: 50%;
     border-radius: 50%;
     object-fit: contain;
     opacity: 1;
@@ -135,7 +164,7 @@
   }
 
   .content__left--button {
-    width: 200px;
+    width: 100%;
     margin-bottom: 1em;
     height: 2em !important;
     z-index: 100;
@@ -143,18 +172,18 @@
 
   .content__left--socials {
     z-index: 100;
-
     margin-bottom: 0em;
+    margin-top: 1em;
     width: 70%;
     border-radius: 5%;
     z-index: 100;
   }
 
+
+
   .content__left--socials img {
     margin: 5%;
-    height: 3em;
-    min-height: 70px;
-    max-height: 90px;
+    height: 2em;
     width: 100%;
   }
 
@@ -167,6 +196,6 @@
   }
 
   .infopanel {
-    font-size: 1em;
+    font-size: 0.8em;
   }
 }
