--- a/src/components/Navbar/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar/Navbar.scss
@@ -56,13 +56,12 @@
   .navbar {
     justify-content: space-between;
     width: 100%;
-    height: 4.5em;
+    height: 1em;
     align-items: center;
   }
 
   .navbar img {
-    height: 3em;
-    width: 3em;
+    height: 1.5em;
   }
   .right {
     position: static;
@@ -87,5 +86,9 @@
     font-size: 1.2em;
 
     padding: 2em;
+  }
+
+  .letter {
+    height: 1em!important;
   }
 }
