--- a/src/components/Landing/Overview/Overview.css
+++ b/src/components/Landing/Overview/Overview.css
@@ -38,3 +38,9 @@
     justify-content: center;
   }
 }
+
+@media only screen and (max-width: 700px) {
+  .contributions {
+    display: none;
+  }
+}
